@@ -1,5 +1,7 @@
 # Contributor Code of Conduct
 
+Just be nice. 
+
 As contributors and maintainers of this project, and in the interest of
 fostering an open and welcoming community, we pledge to respect all people who
 contribute through reporting issues, posting feature requests, updating
