@@ -1,6 +1,6 @@
 The MIT License (MIT)
 
-Copyright (c) 2016 Bryan Lim
+Copyright (c) 2016 - 2999 Bryan Lim
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
