@@ -21,6 +21,6 @@ Gem::Specification.new do |spec|
 
   spec.add_development_dependency "bundler", "~> 1.11"
   spec.add_development_dependency "rake", "~> 10.0"
-  # spec.add_development_dependency "minitest"
+  spec.add_development_dependency "minitest", "~> 5.7"
 
 end
