@@ -1,0 +1,21 @@
+require 'minitest'
+require 'minitest/autorun'
+require 'minitest/spec'
+require 'slicing'
+
+module SlicingTest < Minitest::Test
+
+  def test_print_header
+    #test the output
+  end
+
+  def test_print_header_with_no_quote
+    #test the output
+  end
+
+  def test_print_header_with_quote
+    #test the output
+
+  end
+
+end
