@@ -9,3 +9,4 @@
 IN THE PIPELINE
 - Ship some tests
 - Clean up all the codes by refactoring
+- include some graphing for the result
